--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body
 {
 	font-family:Arial, sans-serif;
 	font-size: 16pt;
-	background-image: url("back.jpg");
+/*	background-image: url("back.jpg"); */
 }
 p
 {
